--- a/styles.css
+++ b/styles.css
@@ -234,7 +234,7 @@ body {
 .home {
     position: relative;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     padding: 4rem 4rem;
     margin: 0 auto;
     /* background-color: var(--color-l-2); */
@@ -269,7 +269,7 @@ body {
     opacity: 0.4;
     position: absolute;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     bottom: 0;
 }
 /* .bc {
@@ -429,6 +429,7 @@ body {
     width: 100%;
     min-height: 100vh;
     padding: 4rem 4rem;
+    margin: auto;
     display: flex;
     /* gap: 1rem; */
     justify-content: center;
@@ -584,7 +585,7 @@ body {
 /* Project */
 .project {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     padding: 4rem 0;
     position: relative;
     display: flex;
@@ -661,7 +662,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding-top: 8rem;
+    /* padding-top: 8rem; */
     /* margin-bottom: 1.5rem; */
 }
 .slide_title {
@@ -870,7 +871,17 @@ body {
 
 
 
-
+@media (max-width: 900px) {
+    html {
+        font-size: 14px;
+    }
+    .slide_img {
+        width: 30%;
+    }
+    .slide_content {
+        padding: 1rem 3.5rem;
+    }
+}
 @media (max-width: 800px) {
     html {
         font-size: 14px;
@@ -881,6 +892,9 @@ body {
     .toggle_btn {
         display: block;
     }
+    /* .home, .home_bc, .project {
+        height: unset;
+    } */
     .home {
         flex-direction: column;
         gap: 1rem;
