--- a/styles.css
+++ b/styles.css
@@ -17,18 +17,20 @@
 }
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 body {
     position: relative;
+    overflow-x: hidden;
 }
 
 /* social media icons */
 .social_media_container {
-    z-index: 2;
+    z-index: 999;
     /* background-color: #002B5B; */
     position: fixed;
     bottom: 6rem;
-    right: 1.5rem;
+    right: 1rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -427,13 +429,12 @@ body {
 .about {
     background-color: var(--color-font);
     width: 100%;
-    min-height: 100vh;
-    padding: 4rem 4rem;
+    padding: 4rem 0;
     margin: auto;
-    display: flex;
+    /* display: flex; */
     /* gap: 1rem; */
-    justify-content: center;
-    align-items: flex-start;
+    /* justify-content: center;
+    align-items: flex-start; */
     position: relative;
 }
 .about_bc {
@@ -448,21 +449,18 @@ body {
     opacity: 0.05;
 }
 .about_h1 {
+    width: 90%;
     color: var(--color-l-2);
     font-size: 2rem;
     /* text-align: left; */
-    margin: 1.5rem 0;
+    margin: 1.5rem auto;
 }
 .timeline {
     margin: auto;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    /* gap: 1rem; */
     width: 80%;
     max-width: 700px;
-    /* margin: auto; */
     color: var(--color-l-2);
 }
 .card {
@@ -476,10 +474,8 @@ body {
     flex-direction: column;
     border: 2px solid var(--color-l-2);
     border-radius: 10px;
-    /* padding: 0.8rem; */
     margin-top: 1.2rem;
     width: 100%;
-    /* height: 24rem; */
     height: auto;
     overflow: hidden;
     position: relative;
@@ -495,7 +491,6 @@ body {
     padding: 0 0.8rem;
     width: 100%;
     height: 100%;
-    /* background-color: #fff; */
     position: absolute;
     top: 0;
     right: 0;
@@ -526,7 +521,6 @@ body {
     text-decoration: none;
     color: var(--color-l-2);
     width: 100%;
-    /* background-color: var(--color-font); */
     border: 2px solid var(--color-l-2);
     border-radius: 10px;
     transition: all 0.2s ease-in-out;
@@ -572,14 +566,6 @@ body {
 .content a:hover {
     color: var(--color-l-4);
 }
-.skill_container {
-    width: 40%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    /* margin: auto; */
-}
 
 
 /* Project */
@@ -618,7 +604,8 @@ body {
     width: 85vw;
     max-width: 1000px;
     height: 80vh;
-    /* max-height: 550px; */
+    min-height: 350px;
+    max-height: 550px;
     margin: auto;
     overflow-y: auto;
     scroll-snap-type: y mandatory;
@@ -769,13 +756,13 @@ body {
     z-index: -1;
 }
 .blog_title {
-    width: 70%;
+    width: 90%;
     margin: 1.5rem auto;
     color: var(--color-l-2);
     font-size: 2rem;
 }
 .blog_container {
-    width: 65%;
+    width: 80%;
     margin: auto;
     display: flex;
     flex-direction: column;
@@ -871,7 +858,7 @@ body {
 
 
 
-@media (max-width: 900px) {
+@media (max-width: 940px) {
     html {
         font-size: 14px;
     }
@@ -917,18 +904,18 @@ body {
     /* .info {
         height: 26rem;
     } */
-    .timeline {
+    /* .timeline {
         width: 90%;
-    }
+    } */
     .swiper_wrapper {
         width: 80vw;
     }
-    .swiper_slide {
+    /* .swiper_slide {
         flex-direction: column;
-    }
+    } */
     .slide_img {
         height: auto;
-        width: 55%;
+        width: 30%;
         /* min-width: 200px; */
         object-fit: cover;
         /* position: absolute;
@@ -962,11 +949,11 @@ body {
         min-width: 336px;
     }
     .about {
-        padding: 4rem 2rem;
+        padding: 4rem 0;
     }
-    .timeline {
+    /* .timeline {
         width: 100%;
-    }
+    } */
     /* .info {
         height: 32rem;
     } */
@@ -975,5 +962,24 @@ body {
     } */
     .slide_img {
         width: 60%;
+    }
+}
+@media (orientation: portrait) {
+    .swiper_wrapper {
+        max-height: 800px;
+    }
+    .swiper_slide {
+        flex-direction: column;
+    }
+    .slide_img {
+        height: auto;
+        width: 55%;
+        /* min-width: 200px; */
+        object-fit: cover;
+        /* position: absolute;
+        left: 1rem; */
+        transform: translateX(0);
+        transform: translateY(1rem);
+        z-index: 1;
     }
 }
