--- a/styles.css
+++ b/styles.css
@@ -499,7 +499,7 @@ body {
     width: 100%;
     height: 100%;
     padding: 0.8rem;
-    background-color: #1f3d4738;
+    background-color: var(--color-font);
     position: absolute;
     top: -100%;
     right: 0;
@@ -508,7 +508,7 @@ body {
     justify-content: center;
     align-items: center;
     text-align: center;
-    backdrop-filter: blur(20px);
+    /* backdrop-filter: blur(20px); */
     color: var(--color-l-3);
     font-size: 1rem;
     transition: all 0.8s ease-in-out;
