--- a/blog_styles.css
+++ b/blog_styles.css
@@ -159,7 +159,7 @@ tr:last-of-type {
 }
 ul, ol {
     margin: 0.8rem 3em;
-    text-align: justify;
+    text-align: left;
 }
 img {
     width: 70%;
@@ -283,7 +283,7 @@ img {
     align-items: center;
     justify-content: space-between;
     padding: 1rem 3rem;
-    width: 95%;
+    width: 100%;
     margin: 0 auto;
 }
 .logo_container {
