--- a/blog_styles.css
+++ b/blog_styles.css
@@ -126,7 +126,7 @@ p {
 .table_rwd {
     display: block;
     margin: 1rem auto;
-    width: 70%;
+    width: 90%;
     overflow-x: auto;
 }
 table {
@@ -158,7 +158,9 @@ tr:last-of-type {
     border-bottom: 2px solid #1e1c1c;
 }
 ul, ol {
-    margin: 0.8rem 3em;
+    width: 90%;
+    margin: 0.8rem 2rem;
+    margin-right: 0;
     text-align: left;
 }
 img {
@@ -352,4 +354,23 @@ img {
     /* .navbar_container a {
         font-size: 0.8rem;
     } */
+    .title {
+        font-size: 1.8rem;
+        font-weight: bold;
+        margin-bottom: 1.2rem;
+        line-height: 2.2rem;
+        text-align: left;
+    }
+    h1 {
+        margin: 1rem 0;
+        font-size: 1.6rem;
+        line-height: 2rem;
+    }
+    h2 {
+        margin: 0.8rem 0;
+        font-size: 1.2rem;
+    }
+    img {
+        width: 90%;
+    }
 }
